# cmd/api/main.go
@@ -19,14 +19,9 @@ const version = "0.0.1"
 
 // @title Wallet API
 // @description This is digital wallet API.
-// @termsOfService http://swagger.io/terms/
 
 // @contact.name API Support
-// @contact.url http://www.swagger.io/support
-// @contact.email support@swagger.io
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @contact.email hemza.hk18@gmail.com
 
 // @BasePath /api/v1
 
