# docs/swagger.json
@@ -3,15 +3,9 @@
     "info": {
         "description": "This is digital wallet API.",
         "title": "Wallet API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "email": "hemza.hk18@gmail.com"
         }
     },
     "basePath": "/api/v1",
